<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.CashBalanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_cash_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/setup_cash_balance_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/setup_cash_balance_subtitle" />

        <LinearLayout
            android:layout_width="133dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCashAmount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="0"
                android:inputType="number"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurrency"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:text="@string/usd"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        android:textColor="@android:color/white" />
</RelativeLayout>
